--- a/shared/scss/components/common/notification.scss
+++ b/shared/scss/components/common/notification.scss
@@ -2,6 +2,7 @@
   background: #E89D21;
   color: #fff;
   padding: $base $base;
+  font-size: $font-size-base;
 
   &.info {
       background: $brand-info;
